@@ -11,6 +11,7 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk):
 ----------------------------
+- mapresample.c: fix for bug 2540 when using raster resampling and AGG.
 
 - mapsde.c: Check at compile time that we have SE_connection_test_server, 
   which appears to only be available for ArcSDE 9+ (#2665).
